# commander

./: .commander.json  .gitignore  Cargo.toml  LICENSE  README.md  ci_process.md  out.sh  packaging_release.md  windows_support.md
.github/workflows/: release.yml
src/: app.rs  command_list.rs  commander_environment.rs  commander_error.rs  filter.rs  filter_list.rs  main.rs  saved_commands.rs  saved_environment.rs  trust.rs
src/test/: command_list.rs
