[package]
name = "commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
crossterm = { version = "0.29", features = ["use-dev-tty"] }
nucleo-matcher = "0.3"
ratatui = "0.30"
thiserror = "2"
