[package]
name = "cmdr-recall"
#Note: This version might be out of date with the current version. It
is updated via github workflows. 
version = "0.1.0"
edition = "2021"
description = "Fuzzy-searchable TUI for command history recall"
license = "MIT"
repository = "https://github.com/bglee/commander"
readme = "README.md"
keywords = ["cli", "tui", "history", "fuzzy", "shell"]
categories = ["command-line-utilities"]

[[bin]]
name = "cmdr-recall"          # binary name users will invoke
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dirs = "6"
crossterm = { version = "0.29", features = ["use-dev-tty"] }
nucleo-matcher = "0.3"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
thiserror = "2"
